--- a/main.ipynb
+++ b/main.ipynb
@@ -8,37 +8,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\\n",
-    "\\\n",
-    "![Artemis program logo](img/Artemis_program_logo.jpg)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Project description:**\n",
-    "\n",
-    "Prediction of weight, type of future sampling, etc. from existing data of Apollo space program."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Resources:**\n",
-    "- Project source: [Plan moon mission using Python](https://learn.microsoft.com/en-us/training/modules/plan-moon-mission-using-python-pandas/) _(with more details)_.\n",
-    "- Apollo history in [Wikipedia](https://fa.wikipedia.org/wiki/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87_%D9%81%D8%B6%D8%A7%DB%8C%DB%8C_%D8%A2%D9%BE%D9%88%D9%84%D9%88).\n",
-    "- The raw data is scraped from [here](https://curator.jsc.nasa.gov/lunar/samplecatalog/sample_results_list.cfm) into CSV file in data folder.\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,10 +39,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id='toc1_1_'></a>[01: Convert data to DataFrame](#toc0_)"
+    "Basic information of the variables:\n",
+    "- ID: \n",
+    "- Mission: \n",
+    "- Type: \n",
+    "- Subtype: \n",
+    "- Weight (g): \n",
+    "- Pristine (%):"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -86,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ArminaRayaneh\\AppData\\Local\\Temp\\ipykernel_3324\\1770176069.py:1: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "C:\\Users\\ArminaRayaneh\\AppData\\Local\\Temp\\ipykernel_7640\\1770176069.py:1: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn')\n"
      ]
     }
@@ -120,6 +104,13 @@
    "source": [
     "plt.style.use('seaborn')\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='toc1_1_'></a>[01: Convert data to DataFrame](#toc0_)"
    ]
   },
   {
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +300,7 @@
        "[2229 rows x 6 columns]"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +424,7 @@
        "max    79537.000000  11729.000000    180.000000"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +875,7 @@
        "4  10005  Apollo11    Core  Unsieved       0.0534         40.31"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
