end of prediction

--- a/main.ipynb
+++ b/main.ipynb
@@ -2272,11 +2272,618 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting the weight of samples"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ایجاد دیتافریم جدید برای ثبت ننتایج پیش بینی"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mission</th>\n",
+       "      <th>Payload (kg)</th>\n",
+       "      <th>Total weight (kg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>artemis1</td>\n",
+       "      <td>26988</td>\n",
+       "      <td>13394.216782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>artemis1b</td>\n",
+       "      <td>37965</td>\n",
+       "      <td>18842.131322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>artemis2</td>\n",
+       "      <td>42955</td>\n",
+       "      <td>21318.681705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mission  Payload (kg)  Total weight (kg)\n",
+       "0   artemis1         26988       13394.216782\n",
+       "1  artemis1b         37965       18842.131322\n",
+       "2   artemis2         42955       21318.681705"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artemis_mission = pd.DataFrame({'Mission':['artemis1', 'artemis1b', 'artemis2'], 'Payload (kg)': [26988, 37965, 42955]})\n",
+    "artemis_mission['Total weight (kg)'] = artemis_mission['Payload (kg)'] * crewedArea_payload_ratio\n",
+    "\n",
+    "artemis_mission"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "تفسیر وزن نمونه برداری از روی داده های جدید"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mission</th>\n",
+       "      <th>Payload (kg)</th>\n",
+       "      <th>Total weight (kg)</th>\n",
+       "      <th>Sample weight from total (kg)</th>\n",
+       "      <th>Sample weight from payload (kg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>artemis1</td>\n",
+       "      <td>26988</td>\n",
+       "      <td>13394.216782</td>\n",
+       "      <td>37.761608</td>\n",
+       "      <td>38.393466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>artemis1b</td>\n",
+       "      <td>37965</td>\n",
+       "      <td>18842.131322</td>\n",
+       "      <td>53.120626</td>\n",
+       "      <td>54.009483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>artemis2</td>\n",
+       "      <td>42955</td>\n",
+       "      <td>21318.681705</td>\n",
+       "      <td>60.102633</td>\n",
+       "      <td>61.108320</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mission  Payload (kg)  Total weight (kg)  Sample weight from total (kg)  \\\n",
+       "0   artemis1         26988       13394.216782                      37.761608   \n",
+       "1  artemis1b         37965       18842.131322                      53.120626   \n",
+       "2   artemis2         42955       21318.681705                      60.102633   \n",
+       "\n",
+       "   Sample weight from payload (kg)  \n",
+       "0                        38.393466  \n",
+       "1                        54.009483  \n",
+       "2                        61.108320  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artemis_mission['Sample weight from total (kg)'] = artemis_mission['Total weight (kg)'] * sample_crewedArea_ratio\n",
+    "artemis_mission['Sample weight from payload (kg)'] = artemis_mission['Payload (kg)'] * sample_payload_ratio\n",
+    "\n",
+    "artemis_mission"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "پیش بینی وزن نمونه برداری با میانگین گیری از نتایج تفسیر"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mission</th>\n",
+       "      <th>Payload (kg)</th>\n",
+       "      <th>Total weight (kg)</th>\n",
+       "      <th>Sample weight from total (kg)</th>\n",
+       "      <th>Sample weight from payload (kg)</th>\n",
+       "      <th>Estimated sample weight (kg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>artemis1</td>\n",
+       "      <td>26988</td>\n",
+       "      <td>13394.216782</td>\n",
+       "      <td>37.761608</td>\n",
+       "      <td>38.393466</td>\n",
+       "      <td>38.077537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>artemis1b</td>\n",
+       "      <td>37965</td>\n",
+       "      <td>18842.131322</td>\n",
+       "      <td>53.120626</td>\n",
+       "      <td>54.009483</td>\n",
+       "      <td>53.565054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>artemis2</td>\n",
+       "      <td>42955</td>\n",
+       "      <td>21318.681705</td>\n",
+       "      <td>60.102633</td>\n",
+       "      <td>61.108320</td>\n",
+       "      <td>60.605476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mission  Payload (kg)  Total weight (kg)  Sample weight from total (kg)  \\\n",
+       "0   artemis1         26988       13394.216782                      37.761608   \n",
+       "1  artemis1b         37965       18842.131322                      53.120626   \n",
+       "2   artemis2         42955       21318.681705                      60.102633   \n",
+       "\n",
+       "   Sample weight from payload (kg)  Estimated sample weight (kg)  \n",
+       "0                        38.393466                     38.077537  \n",
+       "1                        54.009483                     53.565054  \n",
+       "2                        61.108320                     60.605476  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artemis_mission['Estimated sample weight (kg)'] = (artemis_mission['Sample weight from total (kg)'] + artemis_mission['Sample weight from payload (kg)']) / 2\n",
+    "\n",
+    "artemis_mission"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "تفسیر اولویت نمونه برداری"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Pristine (%)</th>\n",
+       "      <th>Remaining (kg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2208.000000</td>\n",
+       "      <td>2208.000000</td>\n",
+       "      <td>2208.000000</td>\n",
+       "      <td>2208.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>52295.559783</td>\n",
+       "      <td>0.168162</td>\n",
+       "      <td>84.313465</td>\n",
+       "      <td>0.137689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>26118.027174</td>\n",
+       "      <td>0.638858</td>\n",
+       "      <td>21.833291</td>\n",
+       "      <td>0.526621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10001.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>15467.750000</td>\n",
+       "      <td>0.003027</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>0.002450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>65538.500000</td>\n",
+       "      <td>0.010215</td>\n",
+       "      <td>92.150000</td>\n",
+       "      <td>0.008565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>72151.250000</td>\n",
+       "      <td>0.093423</td>\n",
+       "      <td>98.042500</td>\n",
+       "      <td>0.077061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>79537.000000</td>\n",
+       "      <td>11.729000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>11.169527</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ID  Weight (kg)  Pristine (%)  Remaining (kg)\n",
+       "count   2208.000000  2208.000000   2208.000000     2208.000000\n",
+       "mean   52295.559783     0.168162     84.313465        0.137689\n",
+       "std    26118.027174     0.638858     21.833291        0.526621\n",
+       "min    10001.000000     0.000000      0.000000        0.000000\n",
+       "25%    15467.750000     0.003027     80.000000        0.002450\n",
+       "50%    65538.500000     0.010215     92.150000        0.008565\n",
+       "75%    72151.250000     0.093423     98.042500        0.077061\n",
+       "max    79537.000000    11.729000    100.000000       11.169527"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples_df_modify['Remaining (kg)'] = samples_df_modify['Weight (kg)'] * (samples_df_modify['Pristine (%)'] * 0.01)\n",
+    "\n",
+    "samples_df_modify.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "تعریف دیتافریمی از نمونه های بحرانی"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1772 entries, 0 to 2228\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   ID              1772 non-null   int64  \n",
+      " 1   Mission         1772 non-null   object \n",
+      " 2   Type            1772 non-null   object \n",
+      " 3   Subtype         1772 non-null   object \n",
+      " 4   Weight (kg)     1772 non-null   float64\n",
+      " 5   Pristine (%)    1772 non-null   float64\n",
+      " 6   Remaining (kg)  1772 non-null   float64\n",
+      "dtypes: float64(3), int64(1), object(3)\n",
+      "memory usage: 110.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "samples_critical = samples_df_modify.loc[(samples_df_modify['Weight (kg)'] <= 0.168) & (samples_df_modify['Remaining (kg)'] <= 0.137)]\n",
+    "\n",
+    "samples_critical.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "محاسبه وزن نمونه های بحرانی"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Type\n",
+       "Basalt      4.75262\n",
+       "Breccia    12.32471\n",
+       "Core        1.03927\n",
+       "Crustal     0.48060\n",
+       "Soil       17.81696\n",
+       "Special     0.00300\n",
+       "Name: Weight (kg), dtype: float64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples_critical.groupby('Type')['Weight (kg)'].sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "پیش بینی نمونه های مورد نیاز در آرتمیس"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# اگر همه نمونه های اولویت بندی شده از نظر محدودیت وزنی قابل پیشنهاد هستند.\n",
+    "samples_needed = samples_critical\n",
+    "\n",
+    "# اگر وزن نمونه های اولویت بندی شده بیش از ظرفیت وزنی نمونه گیری آرتمیس باشد\n",
+    "# samples_needed = samples_critical.loc[samples_critical['Type'].isin(['Basalt', 'Breccia'])]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "چکیده گزارش پیش بینی وزن و نوع نمونه های مورد نیاز"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Soil</td>\n",
+       "      <td>17.81696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Core</td>\n",
+       "      <td>1.03927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Breccia</td>\n",
+       "      <td>12.32471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Basalt</td>\n",
+       "      <td>4.75262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Crustal</td>\n",
+       "      <td>0.48060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Special</td>\n",
+       "      <td>0.00300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Type  Weight (kg)\n",
+       "0     Soil     17.81696\n",
+       "1     Core      1.03927\n",
+       "2  Breccia     12.32471\n",
+       "3   Basalt      4.75262\n",
+       "4  Crustal      0.48060\n",
+       "5  Special      0.00300"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples_needed_overview = pd.DataFrame()\n",
+    "\n",
+    "samples_needed_overview['Type'] = samples_critical['Type'].unique()\n",
+    "samples_needed_weight = samples_needed.groupby('Type')['Weight (kg)'].sum().reset_index()\n",
+    "samples_needed_overview = pd.merge(samples_needed_overview, samples_needed_weight, on='Type')\n",
+    "\n",
+    "samples_needed_overview"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**End.**"
+   ]
   }
  ],
  "metadata": {
